--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
-    "lint": "turbo lint"
+    "lint": "turbo lint",
+    "deploy:web": "./scripts/build-deploy.sh"
   },
   "directories": {
     "doc": "docs"
